# esp-idf-rs-test

./: .gitmodules  Cargo.toml  bindings.h  espidf_bindings.h  sdkconfig.defaults
.cargo/: config.toml
.zed/: settings.json
src/: main.rs
