[package]
name = "esp-idf-rs-test"
version = "0.1.0"
authors = ["smallbraingames <smallbraindev@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-idf-rs-test"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["alloc", "embassy", "esp-idf-svc/native", "esp-idf-svc/panic_handler", "esp-idf-svc/alloc_handler", "esp-idf-svc/libstart"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
embedded-svc = { version = "0.28", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-sys = {version = "0.35.0", default-features = false, features = ["binstart", "native"]}
log = { version = "0.4", default-features = false }

[build-dependencies]
embuild = "0.32.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-sr", version = "1.6.0" }
bindings_header = "bindings.h"
bindings_module = "sr"
